--- a/web/index.html
+++ b/web/index.html
@@ -27,9 +27,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="1.jpg"/>
 
-  <title>villasara_front_end</title>
+  <title>Villa Sara</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
